# duplicate-issue-finder

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  duplicate_issue_finder.py  pyproject.toml  requirements.txt  system_prompt.txt  verifier_prompt.txt  web_ui.py
.github/workflows/: publish-ghcr.yml
src/duplicate_issue_finder/: __init__.py  agent.py  cli.py  config.py  github.py  models.py
tests/: test_config.py
