[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicate-issue-finder"
version = "0.1.0"
description = "Read-only CLI for identifying duplicate GitHub issues"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.75.0",
  "PyGithub>=2.5.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
duplicate-issue-finder = "duplicate_issue_finder.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
